<resources>
    <string name="app_name">BullRunMarket</string>
    <string name="title_activity_truck_selection">truckSelection</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_truck_interface">truckInterface</string>
    <string name="signOut">Sign Out</string>
    <string name="about">About</string>
    <string name="delight">Hyderabadi Delight</string>
    <string name="italian">Italian on Wheels</string>
    <string name="pizza">Pizza Time</string>
    <string name="tacos">Ricos Tacos</string>
    <string name="freepikIcons">Icon made by Freepik from www.flaticon.com</string>
    <string name="brmlogo">brmlogo</string>
    <string name="select_truck">Select a Food Truck&#8230;</string>
</resources>
